<resources>
    <string name="app_name">miniProjetAndro</string>
    <string name="DescScrolView">"L'histoire est centrée sur un lycéen nommé Haruki Kitahara et de ses relations avec Setsuna Ogiso et Kazusa Touma dans le club de musique."</string>
    <string name="ButtonUpdate">Update</string>
    <string name="ButtonDelete">Delete</string>
    <string name="ButtonRetour">Back</string>


    <string name="identifiant">Votre identifiant :</string>
    <string name="motDePasse">Votre mot de passe :</string>
    <string name="titrePageAjout">Ajoutez votre manga</string>
    <string name="titreMainAct">Bienvenue sur votre application de gestion de mangas</string>
    <string name="AttentionDelete">Etes vous sur de vouloir supprimer ce manga ?</string>
    <string name="ButtonSureDelete">Supprimer</string>
    <string name="PageDetailManga">Details :</string>
    <string name="titrePageUpdate">Mettre à jour votre manga</string>
</resources>