<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/darkblue"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/titreTextView"
                        android:layout_width="181dp"
                        android:layout_height="61dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="108dp"
                        android:layout_marginEnd="20dp"
                        android:text="TextView"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageManga"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/genreTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="13dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageManga"
                        app:layout_constraintTop_toBottomOf="@+id/prixTextView" />

                    <TextView
                        android:id="@+id/auteurTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="13dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageManga"
                        app:layout_constraintTop_toBottomOf="@+id/titreTextView" />

                    <TextView
                        android:id="@+id/nbTomeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="13dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageManga"
                        app:layout_constraintTop_toBottomOf="@+id/auteurTextView" />

                    <TextView
                        android:id="@+id/prixTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="13dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageManga"
                        app:layout_constraintTop_toBottomOf="@+id/themeTextView" />

                    <TextView
                        android:id="@+id/themeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="15dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageManga"
                        app:layout_constraintTop_toBottomOf="@+id/nbTomeTextView" />

                    <ImageView
                        android:id="@+id/imageManga"
                        android:layout_width="165dp"
                        android:layout_height="238dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="100dp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/white_album_2" />

                    <TextView
                        android:id="@+id/nomPageTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/PageDetailManga"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.023" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="413dp"
                    android:layout_height="156dp"
                    android:layout_marginTop="-45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arc_2" />

                <ScrollView
                    android:id="@+id/ScrollDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="-40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewSynopsis"
                            android:layout_width="379dp"
                            android:layout_height="100dp"
                            android:text="@string/DescScrolView"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonUpdate"
                    android:layout_width="125dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="#2196F3"
                    android:text="@string/ButtonUpdate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/buttonDelete"
                    android:layout_width="125dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="#2196F3"
                    android:text="@string/ButtonDelete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.003"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/darkblue"
                    android:text="@string/ButtonRetour"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>